# docex

./: .env.example  .gitignore  AGENTS.md  Caddyfile  DEMO.md  DESIGN.md  Dockerfile.consumer  Makefile  PROGRESS.md  README.md  REQUIREMENTS.md  SPEC.md  docker-compose.yml  main.py  progress.md  pyproject.toml  requirements.txt  ui.html
app/: __init__.py  config.py  dependencies.py  enums.py  exceptions.py  main.py  metrics.py  middleware.py
app/kafka/: __init__.py  producer.py
app/repositories/: __init__.py  cache_repository.py  document_repository.py  hash_utils.py  outbox_repository.py
app/routers/: __init__.py  documents.py  health.py  metrics.py  search.py
app/routers/v1/: __init__.py  documents.py  health.py  metrics.py  search.py  tenants.py
app/schemas/: __init__.py  common.py  documents.py  events.py  health.py  search.py  tenant.py
app/services/: __init__.py  document_service.py  health_service.py  search_service.py  tenant_service.py
consumer/: __init__.py  indexer.py  main.py
scripts/: __init__.py  bulk_import.py  deploy.sh  init_db.py  init_es.py  seed.py  setup_db.sh
