[project]
name = "docex"
version = "0.1.0"
description = "Distributed Document Search Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "elasticsearch[async]>=8.0.0,<9.0.0",
    "aiokafka>=0.12.0",
    "prometheus-client>=0.25.0",
]
